# mstar

./: .gitignore  AGENTS.md  README.md  pyproject.toml
Data/STATE-Bench/: .api-recon.md  .env.example  .gitignore  CHANGELOG.md  QUICK_START.md  README.md  RESULTS.md  pyproject.toml
Data/STATE-Bench/agents/: __init__.py  base.py  mstar_kb_agent.py  oracle.py  vanilla.py
Data/STATE-Bench/configs/: llm.yaml  pricing.yaml
Data/STATE-Bench/domains/customer_support/: audit_config.py  config.py  environment.py  generate_tasks.py  policies.py  schemas.py  simulator.py  tools.py  user_attributes.py
Data/STATE-Bench/domains/customer_support/audits/: policy_math.py
Data/STATE-Bench/domains/customer_support/prompts/: judge_task_requirements.md  judge_ux_quality_v3.md  user_sim_base.md
Data/STATE-Bench/domains/customer_support/splits/: train_test_v1.json
Data/STATE-Bench/domains/customer_support/task_envs/: 1-return_partial_order.json  10-return_full_order.json  100-challenge_warranty_maxed_return_option.json  101-hard_price_match_cancel_language.json  102-hard_price_match_split_tender.json  103-hard_price_match_wrong_variant.json  104-hard_price_match_two_similar_items.json  105-hard_price_match_after_exchange_request.json  106-spare_price_match_bundle_anchor.json  107-hard_price_match_gift_buyer_contact.json  108-hard_price_match_customer_quotes_wrong_amount.json  109-hard_exchange_noncanonical_size.json  11-cancel_before_shipment.json  110-spare_exchange_wrong_product_family.json  111-hard_exchange_downgrade_cash_demand.json  112-hard_exchange_oos_waitlist_no_return.json  113-hard_exchange_gift_size_no_refund.json  114-hard_exchange_mixed_order_scope.json  115-hard_exchange_delivered_outside_but_defective_return.json  116-hard_exchange_price_protection_decoy.json  117-hard_exchange_user_pivots_to_return.json  118-hard_shipping_low_value_not_received_refund.json  119-spare_shipping_neighbor_signed.json  12-cancel_after_shipment.json  120-hard_shipping_missing_only_one_of_three.json  121-hard_shipping_wrong_item_customer_says_damaged.json  122-hard_shipping_fragile_goodwill_after_return.json  123-hard_shipping_late_prior_issues_threshold.json  (+122 more)
Data/STATE-Bench/domains/shopping_assistant/: audit_config.py  config.py  environment.py  generate_tasks.py  policies.py  schemas.py  simulator.py  tools.py  user_attributes.py
Data/STATE-Bench/domains/travel/: audit_config.py  config.py  environment.py  generate_tasks.py  policies.py  schemas.py  simulator.py  tools.py  user_attributes.py
Data/STATE-Bench/scripts/: audit.py  compute_metrics.py  generate_tasks.py  precompute_oracle_briefs.py  rescore.py  run_batch.py  run_task.py
Data/STATE-Bench/state_bench/: client.py  domain.py  env_loader.py  environment.py  generation.py  orchestrator.py  replay.py  schemas.py  scoring.py  simulator.py
Data/STATE-Bench/state_bench/audits/: __init__.py  _loader.py  _report.py  _types.py
Data/STATE-Bench/tests/: test_agent_discovery.py  test_agent_runtime_hooks.py  test_agent_turn.py  test_audits.py  test_compute_metrics.py  test_customer_support_environment.py  test_customer_support_generation.py  test_customer_support_harness_attribution.py  test_customer_support_task_schema.py  test_dict_mixin.py  test_domain_pipeline_invariants.py  test_env_loader.py  test_environment.py  test_generate_tasks_filters.py  test_generation_and_regression.py  test_oracle_agent.py  test_policies.py  test_replay.py  test_rescore_state_requirements.py  test_scoring.py  test_shopping_port.py  test_simulator.py  test_travel_inventory_booking.py  test_travel_state_diff.py
(+1108 files in other folders)
