[project]
name = "state-bench"
version = "0.2.dev0"
description = "STATE-Bench: Stateful Task Agent Evaluation Benchmark — multi-domain memory evaluation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "openai>=1.0.0",
    "azure-identity>=1.15.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tiktoken>=0.12.0",
    "tenacity>=9.1.2",
    "lancedb>=0.30.0",
    "pandas>=3.0.1",
    "jinja2>=3.1.6",
    "json-repair>=0.58.6",
    "bedrock-agentcore>=1.3.0",
    "google-cloud-aiplatform>=1.75.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pre-commit>=3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["state_bench", "domains"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pre-commit>=3.0",
]
